--- a/Główna/index.html
+++ b/Główna/index.html
@@ -1,4 +1,5 @@
 <!-- designid by Szymon Jagiełło -->
+<!-- testowy komentarz -->
 <!DOCTYPE html>
 <html lang="PL-pl"> 
     <head>
@@ -126,9 +127,9 @@
                     <div class="work">
                         <img src="images/work-1.png"> <!--Zdjęcie projektu-->
                         <div class="layer">
-                            <h3>Social Media App</h3> <!--Nazwa rzeczy dodanej do portfolio-->
-                            <p>The app connect you yo the talented people around the world. Download it from play store.</p> <!--Opis rzeczy z portfolio-->
-                            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a> <!--Iokona z linkiem-->
+                            <h3>TechnoZone Page</h3> <!--Nazwa rzeczy dodanej do portfolio-->
+                            <p>TechnoZone website is a website written by me for the science club I attend.</p> <!--Opis rzeczy z portfolio-->
+                            <a href="../../technozone/glowna/index.html"><i class="fa-solid fa-up-right-from-square"></i></a> <!--Iokona z linkiem-->
                         </div>
                     </div>
                     <div class="work">
@@ -173,7 +174,7 @@
                             <a href="https://www.youtube.com/channel/UCa9s1wp6LyXavP_5Ow9guxg"><i class="fa-brands fa-youtube"></i></a> <!--YouTube-->
                             <a href="https://www.linkedin.com/in/szymon-jagiełło-52a624280/"><i class="fa-brands fa-linkedin"></i></a> <!--LinkedIn-->
                         </div>
-                        <a href="../Szymon Jagiełło - CV/index.html" class="btn btn2">My CV</a>
+                        <a href="../CV-version1/index.html" class="btn btn2">My CV</a>
                     </div>
                     <!--Tablica do wysyłania ze strony-->
                     <div class="contact-right">
