--- a/Główna/index.html
+++ b/Główna/index.html
@@ -168,7 +168,7 @@
                         <p><i class="fa-solid fa-phone"></i> +48 609-764-221</p>
                             <!--Ikony jako guziki do socjali-->
                         <div class="social-icons">
-                            <a href=https://www.facebook.com/profile.php?id=100027894091926"><i class="fa-brands fa-facebook"></i></a> <!--Facebook-->
+                            <a href="https://www.facebook.com/profile.php?id=100027894091926"><i class="fa-brands fa-facebook"></i></a> <!--Facebook-->
                             <a href="https://twitter.com/SciMon16"><i class="fa-brands fa-twitter"></i></a> <!--Twitter-->
                             <a href="https://www.instagram.com/szymonj183/"><i class="fa-brands fa-instagram"></i></a> <!--Instagram-->
                             <a href="https://www.youtube.com/channel/UCa9s1wp6LyXavP_5Ow9guxg"><i class="fa-brands fa-youtube"></i></a> <!--YouTube-->
